--- a/index1.html
+++ b/index1.html
@@ -7,10 +7,17 @@
     <link rel="stylesheet" href="style1.css">
 </head>
 <body class="work-sans-font">
-    <header>
-        <nav class="navber">
+    <header class="bg-light">
+        <nav class="navber display-flex">
             <h3 class="brand">G3 Architects</h3>
+            <ul class="nav-links display-flex">
+                <li class="nav-item"><a href="" class="nav-link dark-2">Home</a></li>
+                <li class="nav-item"><a href="" class="nav-link dark-2">About</a></li>
+                <li class="nav-item"><a href="" class="nav-link dark-2">Contact Us</a></li>
+                <li class="nav-item"><a href="" class="nav-link dark-2">Login</a></li>
+            </ul>
         </nav>
+        <div class="banner"></div>
     </header>
     <main>
 
