--- a/index1234.html
+++ b/index1234.html
@@ -8,7 +8,7 @@
 </head>
 <body class="work-sans-font">
     <header class="bg-light">
-        <nav class="navber display-flex">
+        <nav class="navbar display-flex">
             <h3 class="brand">G3 Architects</h3>
             <ul class="nav-links display-flex">
                 <li class="nav-item"><a href="" class="nav-link dark-2">Home</a></li>
@@ -17,7 +17,14 @@
                 <li class="nav-item"><a href="" class="nav-link dark-2">Login</a></li>
             </ul>
         </nav>
-        <div class="banner"></div>
+        <div class="banner">
+            <div class="banner-content">
+                <h1 class="banner-title">Brand New Group of Architects </h1>
+                <p class="banner-description">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even</p>
+                <button class="btn-1">Explore More</button>
+            </div>
+            <img class="banner-pic" src="images/banner.png" alt="coming soon">
+        </div>
     </header>
     <main>
 
