--- a/index1234.html
+++ b/index1234.html
@@ -27,7 +27,19 @@
         </div>
     </header>
     <main>
-
+        <section class="teams display-flex">
+            <div class="team-img-container">
+                <img src="images/team1.png" alt="two Architects discussing about design">
+                <img src="images/team2.png" alt="two Architects discussing about design">
+                <img src="images/team3.png" alt="two Architects discussing about design">
+                <img src="images/team4.png" alt="two Architects discussing about design">
+            </div>
+            <div class="feature">
+                <h3 class="feature-title"><span id="text-style" class="dark-3">Quick list</span> of Our Features</h3>
+                <p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even</p>
+                <button class="btn-1">Explore More</button>
+            </div>
+        </section>
     </main>
     <footer>
 
