add editing file

--- a/index1234567.html
+++ b/index1234567.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>G3 Architects</title>
-    <link rel="stylesheet" href="style123456.css">
+    <link rel="stylesheet" href="style1234567.css">
 </head>
 <body class="work-sans-font">
     <header class="bg-light">
@@ -75,6 +75,19 @@
                         <h5 class="fact-name dark-2">Email Send</h5>
                     </div>
                 </div>
+            </div>
+        </section>
+        <section class="section-3 middle">
+            <div class="sec-3-div">
+                <h3>Our Sponsors</h3>
+                <p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration.</p>
+            </div>
+            <div class="sec-3-div-2">
+                <img src="images/sponsors/amazon.png" alt="">
+                <img src="images/sponsors/google.png" alt="">
+                <img src="images/sponsors/spotify.png" alt="">
+                <img src="images/sponsors/telerama.png" alt="">
+                <img src="images/sponsors/figma.png" alt="">
             </div>
         </section>
     </main>
