--- a/index123456789.html
+++ b/index123456789.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>G3 Architects</title>
-    <link rel="stylesheet" href="style1234567.css">
+    <link rel="stylesheet" href="style123456789.css">
 </head>
 <body class="work-sans-font">
     <header class="bg-light">
@@ -27,7 +27,7 @@
         </div>
     </header>
     <main>
-        <section class="teams display-flex">
+        <section class="section-1 display-flex">
             <div class="team-img-container">
                 <img src="images/team1.png" alt="two Architects discussing about design">
                 <img src="images/team2.png" alt="two Architects discussing about design">
@@ -40,10 +40,37 @@
                 <button class="btn-1">Explore More</button>
             </div>
         </section>
-        <section>
-            <h3 class="section-title">Features you will love & enjoy</h3>
+        <section class="section-2 display-flex">
+            <div class="div-1">
+                <h3 id="sec-2-title dark-2" class="section-title">Features you will<br>love & enjoy</h3>
+                <p class="dark-3">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or random words which don't look even</p>
+
+                <div class="sec-2-card">
+                    <h4 class="card-title">Desktop & Mobile Version</h4>
+                    <p class="dark-3">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or random...........</p>
+                </div>
+                <div class="sec-2-card">
+                    <h4 class="card-title">Drag & Drop Builder</h4>
+                    <p class="dark-3">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or random...........</p>
+                </div>
+                <div class="sec-2-card">
+                    <h4 class="card-title">Awesome Modern Design</h4>
+                    <p class="dark-3">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or random...........</p>
+                </div>
+                <div class="sec-2-card">
+                    <h4 class="card-title">Super Easy to Edit</h4>
+                    <p class="dark-3">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or random...........</p>
+                </div>
+            </div>
+            <div class="div-1">
+                <img src="images/architect.png" alt="">
+                <button id="experience-badge" class="btn-1">
+                    <span id="experience-year">10+years</span><br>
+                    <span>Experience</span>
+                </button>
+            </div>
         </section>
-        <section>
+        <section class="section-3">
             <h3 class="section-title">Some Facts</h3>
             <p class="dark-3 fact-dis">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration.</p>
             <div class="facts-container">
@@ -77,7 +104,7 @@
                 </div>
             </div>
         </section>
-        <section class="section-3 middle">
+        <section class="section-4">
             <div class="sec-3-div">
                 <h3>Our Sponsors</h3>
                 <p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration.</p>
@@ -90,6 +117,7 @@
                 <img src="images/sponsors/figma.png" alt="">
             </div>
         </section>
+        
     </main>
     <footer>
 
